# the-bad-one

./: CMakeLists.txt
.cache/clangd/index/: catch_approx.cpp.D3BFF38013BE6D2C.idx  catch_approx.hpp.FA5687806F064D17.idx  catch_assertion_handler.cpp.DBFFE71AB0496DD1.idx  catch_assertion_handler.hpp.08380239EA907D8D.idx  catch_assertion_info.hpp.FA7E219B2B057DAF.idx  catch_assertion_result.cpp.A7CDACBB5A795D68.idx  catch_assertion_result.hpp.D3FAF65CC3ECAEE1.idx  catch_benchmark_function.cpp.0682ADAC564FBC86.idx  catch_benchmark_function.hpp.7C9D58C4B1794191.idx  catch_case_insensitive_comparisons.cpp.5CE2D67777E18AD4.idx  catch_case_insensitive_comparisons.hpp.E0DA3B919719935C.idx  catch_case_sensitive.hpp.385DDFA8153A2826.idx  catch_chronometer.cpp.9C4AB6D61FB42E09.idx  catch_chronometer.hpp.19373D9B8906A916.idx  catch_clara.cpp.6A47732A46E86F88.idx  catch_clara.hpp.32E409173345FA5C.idx  catch_clock.hpp.42EA03AB6D145E7E.idx  catch_commandline.cpp.B5D38E8D5CAC1936.idx  catch_commandline.hpp.300981081C72BF57.idx  catch_compare_traits.hpp.CDB756D02E595DB6.idx  catch_compiler_capabilities.hpp.2FB7EB73B6A888D8.idx  catch_complete_invoke.hpp.3BA70B1297F88747.idx  catch_config.cpp.ECDF64417033E9EC.idx  catch_config.hpp.90EDE1474BB4A422.idx  catch_config_android_logwrite.hpp.B2BE82A8BFE34F5C.idx  catch_config_counter.hpp.8610581496A26382.idx  catch_config_uncaught_exceptions.hpp.DD8278D3E6934DDE.idx  catch_config_wchar.hpp.E43DEC0D2D713460.idx  catch_console_colour.cpp.D6DEF0DD5DE60C4C.idx  catch_console_colour.hpp.74661B605D4C9D30.idx  catch_console_width.hpp.9F18D48867245D66.idx  catch_container_nonmembers.hpp.084D4695766CF22D.idx  catch_context.cpp.B29CD8C47B8FB3EB.idx  catch_context.hpp.5DE2E8C676DD6579.idx  catch_debug_console.cpp.A08C38D536593D5F.idx  catch_debug_console.hpp.D62F4CF23F4B8DFB.idx  catch_debugger.cpp.431493A309CB727E.idx  catch_debugger.hpp.87172E6C4C413BCA.idx  catch_decomposer.cpp.A15B5D5FF9BB0E03.idx  catch_decomposer.hpp.BABC2230B7415C27.idx  (+209 more)
.github/workflows/: cmake.yml
src/core/: dice_bucket.cc  dice_bucket.h  dice_rng.cc  dice_rng.h  dtos.h  expected.h  match.cc  match.h  match_state.h  player.cc  player.h
tests/: dice_bucket_test.cc  dice_rng_test.cc  expected_test.cc  match_test.cc  player_test.cc  tests.cc
